# rust-nostd-x86-executable

./: Cargo.toml  asm.s  build.rs  main.rs
