[package]
name = "nostdtrait"
version = "0.1.0"
authors = ["Julius Michaelis <michaelis@jp.fujitsu.com>"]
edition = "2018"

[[bin]]
name = "demo"
path = "main.rs"

[profile.dev]
panic = "abort" # otherwise we'll get complaints about a missing eh_personality language item

[profile.release]
panic = "abort"
opt-level = 'z'
lto = 'fat'
codegen-units = 1

[build-dependencies]
cc = "1"

[dependencies.libc]
version = "0.2.91"
default-features = false
